XMLtoCSV/objects/unpackaged/objects/Coaching_Report_vod__c.object
<CustomObject>
    <description>The Coaching Reports object is used for rating and assessment of reps by their managers.</description>
    <fields>
        <fullName>Call_Productivity__c</fullName>
        <description>Call productivity rating.</description>
        <inlineHelpText>5 – Superior
4 – Exceeds expectations
3 – Meets expectations
2 – Below expectations
1 – Poor</inlineHelpText>
        <label>Call Productivity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_PTP__c</fullName>
        <label>Division PTP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The rep being rated.</description>
        <label>HCAS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager that is filling out the rating.</description>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>PCYC_Sales_Mgr</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Internal field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Overall rating.</description>
        <formula>(VALUE(TEXT(Call_Productivity__c)))/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_2015_Strategic_Imperatives__c</fullName>
        <defaultValue>&quot;Message: Multiple on-label indication presentations on every call.&quot; &amp; BR() &amp; BR() &amp; 

&quot;Reach: 85% of H/VH targets seen each quarter. Impact 5 prescribers/day.&quot; &amp; BR() &amp; BR() &amp; 

&quot;Purpose: Selling objectives for each customer. Close on every call.&quot; &amp; BR() &amp; BR() &amp; 

&quot;Force: JBI Partners - Alignment and Execution across all leadership levels.&quot; &amp; BR() &amp; BR()</defaultValue>
        <description>2015 Strategic Imperatives for Field Coaching Report</description>
        <label>2015 Strategic Imperatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_2015_Strategic_Priorities__c</fullName>
        <defaultValue>&quot;• Expand Prescriber Base &quot; &amp; BR() &amp; BR() &amp;

&quot;• Increase Frequency of on-label IMBRUVICA Use&quot; &amp; BR() &amp; BR() &amp;

&quot;• Improve Adherence &amp; Duration of Therapy&quot; &amp; BR()</defaultValue>
        <description>2015 Strategic Priorities under Field Coaching Report</description>
        <label>2015 Strategic Priorities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_2016_Strategic_Imperatives__c</fullName>
        <defaultValue>&quot;Maximize Frontline 1L CLL Opportunity.&quot; &amp; BR() &amp; BR() &amp; 

&quot;Drive treatment to progression- Link treat to progression (TTP) to efficacy&quot; &amp; BR() &amp; BR() &amp; 

&quot;Enable Simple, Fast and affordable Access to all on-label patients&quot; &amp; BR() &amp; BR() &amp; 

&quot;Execute on PCYC Call Plans and Promotional Speaker programs&quot; &amp; BR() &amp; BR() &amp; 

&quot;Improve execution with JBI business partners&quot; &amp; BR() &amp; BR()</defaultValue>
        <label>2016 Strategic Imperatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_2016_Strategic_Priorities__c</fullName>
        <defaultValue>&quot;• Sales Performance- Meet or Exceed 2016 on-label sales goal &quot; &amp; BR() &amp; BR() &amp; 

&quot;• Generate Demand through Customer Engagement&quot; &amp; BR() &amp; BR() &amp; 

&quot;• Taking ownership in creating a great work environment&quot; &amp; BR()</defaultValue>
        <label>2016 Strategic Priorities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Account_s_Visited__c</fullName>
        <label>Account(s) Visited</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Agreed_Upon_Action_Steps__c</fullName>
        <label>Agreed Upon Action Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Continuity__c</fullName>
        <label>Call Continuity</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Closing__c</fullName>
        <label>Closing</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments_F_u_on_Prior_Action_Steps__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments_HCAS_Expectations__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments_Selling_Excellence__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments_Territory_Business_Mgmt__c</fullName>
        <description>Territory Business Management section comments for the sales representative.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments_YTD_Sales_Perf_Results__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Demand_Report_Date__c</fullName>
        <label>Demand Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Employee_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCAS Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Employee_Comments__c</fullName>
        <label>HCAS Comments (optional)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Field_Day_Agenda__c</fullName>
        <label>Field Day Agenda</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_HCAS_QTD_Territory_Attainment__c</fullName>
        <label>HCAS QTD Territory % Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Hematology_Brand_Objectives__c</fullName>
        <defaultValue>&quot;• Establish the BTK market and redefine treatment expectations&quot; &amp; BR() &amp; BR() &amp; 
&quot;- Educate customers on IMBRUVICA‘s unique mechanism of action&quot; &amp; BR() &amp; 
&quot;and is a first-in-class, covalent BTK inhibitor&quot; &amp; BR() &amp; BR() &amp; BR() &amp; 

&quot;• Communicate IMBRUVICA efficacy and safety&quot; &amp; BR() &amp; BR() &amp; 
&quot;- Probe to fully understand CLL and MCL treatment preferences&quot; &amp; BR() &amp; 
&quot;- Seize opportunities to change behaviors in 1-prior CLL with&quot; &amp; BR() &amp;
&quot;IMBRUVICA by communicating efficacy and safety in 1 prior&quot; &amp; BR() &amp; 
&quot;CLL regardless of prognostic risk or cytogenetics&quot; &amp; BR() &amp; BR() &amp; 

&quot;- Target CLL patients who have received 1 prior therapy&quot; &amp; BR() &amp; 
&quot;--- Previously treated with chemo-immuno therapy&quot; &amp; BR() &amp; 
&quot;--- Previously treated with single agent therapy&quot; &amp; BR() &amp; BR() &amp; 

&quot;- Establish IMBRUVICA as the sole standard of care in all lines of deletion 17p CLL&quot; &amp; BR() &amp; 
&quot;--- Target appropriate 1L deletion 17p patients&quot; &amp; BR() &amp; BR() &amp; 

&quot;- Seize opportunities to change behaviors in 1-prior MCL with IMBRUVICA&quot; &amp; BR() &amp; 
&quot;--- Target MCL patients who have received 1 prior therapy&quot; &amp; BR() &amp; 
&quot;--- Previously treated fit patients&quot; &amp; BR() &amp; 
&quot;--- Previously treated, good response to chemo-immuno therapy&quot; &amp; BR() &amp; BR() &amp; BR() &amp; 

&quot;• Solidify the value of oral dosing, adherence and access programs&quot; &amp; BR() &amp; BR() &amp; 

&quot;- Educate customers on the value proposition, coverage status and&quot; &amp; BR() &amp; 
&quot;You&amp;I access support programs to ensure patient access to&quot; &amp; BR() &amp; 
&quot;IMBRUVICA&quot; &amp; BR() &amp; 
&quot;- Ensure account level confidence in the IMBRUVICA distribution model&quot; &amp; BR() &amp; 
&quot;and that all customers have access to IMBRUVICA&quot; &amp; BR() &amp; 
&quot;regardless of local preferred supply chain&quot;</defaultValue>
        <description>Admin to own this (Steve Marks) – Brand provides objectives each period QTR or TRIMESTER</description>
        <label>Hematology Brand Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Key_Messages__c</fullName>
        <label>Key Messages</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Local_Goal_Update__c</fullName>
        <inlineHelpText>(Text Field to copy and past local goal)</inlineHelpText>
        <label>Local Goal Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_National_PTP__c</fullName>
        <label>National PTP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_Objection_Handling__c</fullName>
        <label>Objection Handling</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Overall_FCR_Rating__c</fullName>
        <inlineHelpText>Exceeds – Exceeds expectations
Meets – Meets expectations
Sometimes Meets – Sometimes Meets expectations
Does Not Meet – Does Not Meet expectations
N/A – Not Applicable</inlineHelpText>
        <label>Overall FCR Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Post_Call_Analysis__c</fullName>
        <label>Post Call Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Pre_Call_Plan__c</fullName>
        <label>Pre-Call Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Previous_Agreed_Upon_Action_Steps__c</fullName>
        <label>Previous Agreed Upon Action Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Probing_Listening__c</fullName>
        <label>Probing &amp; Listening</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_QTD_Division_Average_Attainment__c</fullName>
        <label>QTD Division Average % Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_QTD_National_Average_Attainment__c</fullName>
        <label>QTD National Average % Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_R13_Growth__c</fullName>
        <label>R13 Growth</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_R4_Growth__c</fullName>
        <label>R4 Growth</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_RSD_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSD Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_RSD_Comments__c</fullName>
        <label>RSD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Region_PTP__c</fullName>
        <label>Region PTP</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_Review_Date_2__c</fullName>
        <description>The 2nd date the review was filled out.</description>
        <label>Review Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Sales_Performance_Comments__c</fullName>
        <label>Sales Performance Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Strategic_Territory_Management__c</fullName>
        <label>Strategic Territory Management</label>
        <picklist>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Development Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Territory_Number__c</fullName>
        <label>Territory Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Territory_PTP__c</fullName>
        <label>Territory PTP</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCYC_Total_Capsules_R13W__c</fullName>
        <label>Total Capsules R13W</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Date the review was filled out.</description>
        <label>Review Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Period__c</fullName>
        <description>Time period that the performance review refers to.</description>
        <label>Review Period</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the review.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>RSD Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCAS Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Field Coaching Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manager_vod__c</columns>
        <columns>Employee_vod__c</columns>
        <columns>Status__c</columns>
        <columns>Review_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final,HCAS Review</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>HCAS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FCRs</fullName>
        <columns>NAME</columns>
        <columns>Manager_vod__c</columns>
        <columns>Employee_vod__c</columns>
        <columns>Status__c</columns>
        <columns>Review_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All FCRs</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Manager</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FCR-{00000000}</displayFormat>
        <label>Coaching Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Coaching Reports</pluralLabel>
    <recordTypes>
        <fullName>Employee_Review</fullName>
        <active>false</active>
        <description>Employee Review Coaching Report</description>
        <label>Employee Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Final</fullName>
        <active>true</active>
        <description>Final Coaching Report</description>
        <label>Final</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCAS_Review</fullName>
        <active>true</active>
        <description>HCAS Review replacing Employee Review</description>
        <label>HCAS Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCYC_Draft</fullName>
        <active>true</active>
        <description>Draft Coaching Reports</description>
        <label>Draft</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>